# underwater_simulation

./: .gitignore  .gitmodules  README.md
3rd_parties/uwsim_osgocean-release/: CMakeLists.txt  osgOceanConfig.cmake.in
3rd_parties/uwsim_osgocean-release/debian/: changelog  control  gbp.conf  rules
3rd_parties/uwsim_osgocean-release/include/osgOcean/: MipmapGeometryVBO  OceanScene
3rd_parties/uwsim_osgocean-release/src/osgOcean/: FFTOceanSurfaceVBO.cpp  MipmapGeometryVBO.cpp  OceanScene.cpp  SiltEffect.cpp
3rd_parties/uwsim_osgworks-release/: CMakeLists.txt  osgWorksConfig.cmake.in
3rd_parties/uwsim_osgworks-release/debian/: changelog  control  gbp.conf  rules
3rd_parties/uwsim_osgworks-release/include/osgwTools/: FBOUtils.h
3rd_parties/uwsim_osgworks-release/src/osgwControls/: SliderControl.cpp
3rd_parties/uwsim_osgworks-release/src/osgwQuery/: QueryUtils.cpp
3rd_parties/uwsim_osgworks-release/src/osgwTools/: FBOUtils.cpp  GeometryModifier.cpp
underwater_sensor_msgs/: CMakeLists.txt  package.xml
uwsim/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  package.xml
uwsim/data/scenes/: xacroExample.xml
uwsim/include/uwsim/: ConfigXMLParser.h  EventHandler.h  KinematicChain.h  ROSInterface.h  ROSSceneBuilder.h  SceneBuilder.h  SimulatedDevice.h  SimulatedIAUV.h  SimulatorConfig.h  TrajectoryVisualization.h  URDFRobot.h  UWSimUtils.h  ViewBuilder.h
uwsim/src/: ConfigXMLParser.cpp  GPSSensor.cpp  KinematicChain.cpp  ROSInterface.cpp  ROSSceneBuilder.cpp  SceneBuilder.cpp  SimulatedIAUV.cpp  URDFRobot.cpp  UWSimUtils.cpp  ViewBuilder.cpp  main.cpp  osgOceanScene.cpp
